# emcraft-som7-starterkit

./: .cproject  CMakeLists.txt
UCL-SOM-BSB/: LCD-TN43-bom.xls  ucl-som-bsb-bom.xls
lcd_test/: CMakeLists.txt  buttons.c  buttons.h  gt911.c  gt911.h  i2c.c  i2c.h  lcd.c  lcd.h  main.c  mpu.c  mpu.h  rcc.c  rcc.h  sdram.c  sdram.h  sdram_io_cfg.h  stm32f746ng.ld.in  systimer.c  systimer.h  uart.c  uart.h
libraries/: libopencm3.cmake
toolchains/: arm-none-eabi-gcc.cmake  toolchains.cmake
